--- a/CrunchTime/app/src/main/res/values/strings.xml
+++ b/CrunchTime/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Crunch Time</string>
     <string name="action_settings">Settings</string>
+    <string-array name="exercise_array">
+        <item>Pushups</item>
+        <item>Situps</item>
+        <item>Jumping Jacks</item>
+        <item>Jogging</item>
+    </string-array>
 </resources>
