--- a/CrunchTime/app/src/main/res/values/strings.xml
+++ b/CrunchTime/app/src/main/res/values/strings.xml
@@ -4,7 +4,15 @@
     <string-array name="exercise_array">
         <item>Pushups</item>
         <item>Situps</item>
+        <item>Squats</item>
+        <item>Leg-lift</item>
+        <item>Plank</item>
         <item>Jumping Jacks</item>
+        <item>Pullup</item>
+        <item>Cycling</item>
+        <item>Walking</item>
         <item>Jogging</item>
+        <item>Swimming</item>
+        <item>Stair-Climbing</item>
     </string-array>
 </resources>
