conversion broken but filling

--- a/CrunchTime/app/src/main/res/values/strings.xml
+++ b/CrunchTime/app/src/main/res/values/strings.xml
@@ -5,10 +5,10 @@
         <item>Pushups</item>
         <item>Situps</item>
         <item>Squats</item>
-        <item>Leg-lift</item>
-        <item>Plank</item>
+        <item>Leg-lifts</item>
+        <item>Planks</item>
         <item>Jumping Jacks</item>
-        <item>Pullup</item>
+        <item>Pullups</item>
         <item>Cycling</item>
         <item>Walking</item>
         <item>Jogging</item>
